预定页金额明细样式修改

--- a/css/airDetails.css
+++ b/css/airDetails.css
@@ -320,7 +320,7 @@ body {
 }
 .air_price .price_main .price_total span {
   font-size: 36px;
-  color: #ff0000;
+  color: #4dbd73;
   font-weight: bold;
   vertical-align: baseline;
 }
