--- a/css/ticketSearch.css
+++ b/css/ticketSearch.css
@@ -84,7 +84,7 @@
 }
 
 .ticket_main .list_item {
-  border-bottom: 1px solid #d1d6d8;
+  border-bottom: 1px solid #b0b4b6;
   /* padding: 24px 0 17px; */
 
 }
