--- a/css/airReservation.css
+++ b/css/airReservation.css
@@ -303,12 +303,25 @@
 
 /* 金额计算 */
 .price_box {
-  background: #dfeaf0;
+  background: #fff;
   padding: 10px;
   text-align: right;
 }
 .price_box > div {
   margin-bottom: 10px;
+}
+.price_box .price_main{
+  text-align: justify;
+  text-align-last: justify;
+}
+.price_box .price_list{
+  display: inline-block;
+}
+.price_box .price_list .price_list_item{
+  text-align: left;
+  font-size: 16px;
+  font-weight: bold;
+  /* display: inline-block; */
 }
 .price_box .price_tip {
   color: #222;
@@ -328,6 +341,8 @@
   margin: 10px 0;
   color: #000;
   padding: 10px 0;
+  display: inline-block;
+  text-align: right;
 }
 .price_box .price_total p {
   display: inline-block;
