增加输入框字符设置、新窗口打开兼容、预定-拆分打开新窗口失败备选方案

--- a/css/base.css
+++ b/css/base.css
@@ -85,3 +85,8 @@ header .tab_header .header_tab_box a.selected::after {
   height: 5px;
   background: #4dbd73;
 }
+
+
+.jump_orderDetail_btn{
+  color: #4dbd73;
+}
