增加证件发行国、详情增加乘客性别、证件发行国

--- a/css/airDetails.css
+++ b/css/airDetails.css
@@ -266,9 +266,9 @@ body {
   margin-right: 10px;
   color: #fff;
 }
-.passenger_box .passenger_list {
+/* .passenger_box .passenger_list {
   margin-right: 20px;
-}
+} */
 .passenger_box .passenger_list .list_name {
   min-width: 50px;
   text-align: right;
