--- a/css/ticketLog.css
+++ b/css/ticketLog.css
@@ -34,14 +34,12 @@ body {
 
 .logList{
   margin: 10px;
-  overflow-y: auto;
+  overflow: auto;
   height: 700px;
+  min-width: 1100px;
   background-color: #fff;
   display: none;
 }
-.logList .table_thead {
-
-}
-.logList .table_tbody {
- 
+.logList ax-table.ax-align-left td, .ax-table.ax-align-left th {
+  min-width: 170px;
 }
